<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bachground"
    tools:context=".SigninActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/login_welcome"
        android:textColor="@color/text_white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/email_signin_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_height"
        android:layout_below="@id/welcome_tv"
        android:layout_marginStart="@dimen/layout_marginLeft_et"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/layout_marginRight_et"
        android:background="@drawable/round_layout"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/text_white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/text_white" />

    <EditText
        android:id="@+id/pass_signin_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_height"
        android:layout_below="@id/email_signin_et"
        android:layout_marginStart="@dimen/layout_marginLeft_et"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:layout_marginEnd="@dimen/layout_marginRight_et"
        android:background="@drawable/round_layout"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/text_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/text_white" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_signin_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:background="@drawable/round_button"
        android:elevation="5dp"
        android:text="@string/signin"
        android:textColor="@color/text_white"
        android:onClick="signIn"/>

    <TextView
        android:id="@+id/create_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_button"
        android:layout_marginStart="100dp"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:text="@string/dont_have_account"
        android:textColor="@color/text_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_button"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/layout_marginTop_et"
        android:layout_toEndOf="@id/create_account_tv"
        android:text="@string/signup"
        android:onClick="openSignUpActivity"
        android:textColor="@color/signup_color"
        android:textStyle="bold" />


</RelativeLayout>